# module-tuxedo

./: AUTHORS  ChangeLog  Makefile.am  README  RELEASE-NOTES  configure.ac  qore-tuxedo-module.spec
docs/: tuxedo-module-doc.html
docs/docbook/: Makefile  bookinfo.docbook  module.docbook  tuxedo-module.docbook
src/: Makefile.am  QC_TuxedoAdapter.cc  QoreTuxedoAdapter.cc  tuxedo.cc
